--- a/src/app/register/registration/registration.component.html
+++ b/src/app/register/registration/registration.component.html
@@ -1,1 +1,56 @@
-<p>registration works!</p>
+<div class="page-content">
+    <div class="row wrap">
+        <div class="col-md-12">
+            <b>Employee Registration</b>
+            <br />
+            <br />
+            <form [formGroup]="inputForm">
+    <div class="row ">
+    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12">
+        <div class="form-group">
+            <div class="custom-label">First Name <span class='mandate'>*</span></div>
+            <input style='width: 100%;' autocomplete="off" type="text" id="rate" pInputText
+                formControlName="first_name" placeholder="Enter First Name">
+        </div>
+    </div>
+    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12">
+        <div class="form-group">
+            <div class="custom-label">Last Name <span class='mandate'>*</span></div>
+            <input style='width: 100%;' autocomplete="off" type="text" id="rate" pInputText
+                formControlName="last_name" placeholder="Enter Last Name ">
+        </div>
+    </div>
+    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12">
+        <div class="form-group">
+            <div class="custom-label">Username <span class='mandate'>*</span></div>
+            <input style='width: 100%;' autocomplete="off" type="text" id="rate" pInputText
+                formControlName="user_name" placeholder="Enter Username ">
+        </div>
+    </div>
+    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12">
+        <div class="form-group">
+            <div class="custom-label">Password <span class='mandate'>*</span></div>
+            <input style='width: 100%;' autocomplete="off" type="password" id="rate" pInputText
+                formControlName="password" placeholder="Enter Password ">
+        </div>
+    </div>
+    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12">
+        <div class="form-group">
+            <div class="custom-label">Phone<span class='mandate'>*</span></div>
+            <input style='width: 100%;' autocomplete="off" type="number" id="rate" pInputText
+                formControlName="phone" placeholder="Enter Phone">
+        </div>
+    </div>
+    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-xs-12"
+        style="margin-top:10px;align-self: flex-end !important;">
+        <button pButton pRipple type="button" (click)='addEmployee()'
+            label="Add" class="p-button-success"></button>
+            &nbsp;
+            &nbsp;
+        <button pButton pRipple type="reset" label="Reset" class="p-button-warning"></button>
+    </div>
+</div>
+</form>
+</div>
+</div>
+</div>
