--- a/src/app/register/registration/registration.component.html
+++ b/src/app/register/registration/registration.component.html
@@ -48,6 +48,10 @@
             &nbsp;
             &nbsp;
         <button pButton pRipple type="reset" label="Reset" class="p-button-warning"></button>
+        &nbsp;
+        &nbsp;
+        <button pButton pRipple type="button" (click)='onloginclick()'
+            label="Back" class="p-button-success"></button>
     </div>
 </div>
 </form>
