--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,4 +1,22 @@
 <div style="display: flex;justify-content: end;position: relative;top: 14px;">
+    <div style="    position: absolute;
+    color: #fff;
+    width: 700px;
+    left: 30px;
+    top: 11px;
+">
+        <b style="color: #ffa100;
+        font-size: 24px;
+    "> About Indane</b>
+        <br />
+        <br />
+        <span>
+            Indane is a subsidiary of Indian Oil Corporation which is under the ownership of Ministry of Petroleum and
+            Natural Gas of the government of India. It is the world's second largest government-owned subsidiary
+            responsible for manufacturing LPG. The brand was conceived in 1964 to bring modern cooking to Indian
+            kitchens
+        </span>
+    </div>
     <div class="row" style="position: absolute;">
         <div class=" col-sm-4 col-xs-4">
             <button style='width: 100%;width: 170px;' pButton pRipple type="button" label="Admin Login"
@@ -9,8 +27,8 @@
                 (click)="onnewUserclick()" class="p-button-success"></button>
         </div>
         <div class=" col-sm-4 col-xs-4">
-            <button style='width: 100%;width: 170px;' (click)="page='Customer'" pButton pRipple type="button" label="Existing User"
-                class="p-button-warning"></button>
+            <button style='width: 100%;width: 170px;' (click)="page='Customer'" pButton pRipple type="button"
+                label="Existing User" class="p-button-warning"></button>
         </div>
     </div>
 </div>
