--- a/src/app/register/registration/registration.component.html
+++ b/src/app/register/registration/registration.component.html
@@ -1,7 +1,7 @@
 <div class="page-content">
     <div class="row wrap">
         <div class="col-md-12">
-            <b>Employee Registration</b>
+            <b>Customer Registration</b>
             <br />
             <br />
             <form [formGroup]="inputForm">
